--- a/Hydrogen.html
+++ b/Hydrogen.html
@@ -1,92 +1,94 @@
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-compatible" content="ie=edge">
-    <link rel="icon" href="images/favicon.PNG">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" 
-    integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/lesson_style.css">
-    <link rel="stylesheet" href="navbar/nav_style.css">
-    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+<!DOCTYPE html>
+<html>   
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-compatible" content="ie=edge">
+        <link rel="icon" href="images/favicon.PNG">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" 
+        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+        <link rel="stylesheet" href="css/lesson_style.css">
+        <link rel="stylesheet" href="navbar/nav_style.css">
+        <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
-    <title>Chemistry Lessons | ElementLabs</title>
-    <meta name="description" content="learn and test your knowledge of elements">
-</head>
+        <title>Chemistry Lessons | ElementLabs</title>
+        <meta name="description" content="learn and test your knowledge of elements">
+    </head>
 
-<body>
-    <div class="lessonHeader">
-        <h1><b>Hydrogen</b></h1>
-    </div>
-    <table id ="id3">
-        <tr>
-            <td>Symbol</td>
-            <td> H </td>
-        </tr>
-        <tr>
-            <td>Atom Number</td>
-            <td> 1 </td>
-        </tr>
-        <tr>
-            <td>Atom Wieght</td>
-            <td>1.00794</td>
-        </tr>
-        <tr>
-            <td>Classification</td>
-            <td>Nonmetal</td>
-        </tr>
-        <tr>
-            <td>Melting Point</td>
-            <td>-259.14°C</td>
-        </tr>
-        <tr>
-            <td>Discovered by</td>
-            <td>Henry Cavendish in 1766</td>
-        </tr>
-    </table>
-    <div class="information" id="id4">
-        <p>
-            <h2 id = 'id'>Facts about Hydrogen</h2>
-            <ul id = 'id1'>
-                <li>Hydrogren is the lightest element on earth.</li>
-                <li>It consists of one proton and one eletron.</li>
-                <li>When Hydrogren and Oxygen come together that make water.</li>
-                <li>It makes up more than 90% of all elements in the universe.</li>
-                <li>Hydrogen gas is what makes up the stars that we see in the night sky. </li>
-                <li>Hydrogen makes up our sun.</li>
-                <li>At standard temperature and pressure hydrogren is a colorless, odorless, and tastless</li>
-                <li>Hydrogen is also used as a rocket fuel where liquid hydrogen is combined with liquid oxygen
-                    to produce a powerful explosion. Scientists hope that someday hydrogen can be used as a 
-                    clean fuel alternative to gasoline.</li>
-            </ul>
-        </p>
-    </div>
-    
-    <!-- Begining the quiz -->
-    <div class="message" id="id5">
-        <p id = "id2">
-            When your ready click the button below to take a test on the information you have 
-            learnt about hydrogen. The Quiz consistsof three multi choice question in which you
-            have 10 second to answer. Best of luck!!
-        </p>
-    </div>
-
-    <!-- Creating the Quiz-->
-    <div class="quizDiv" id="quizDiv">
-        <button id="start" onclick="startQuiz()">Start Quiz!</button>
-
-        <div id ="quiz" style ="display: none;">
-            <div id="question"></div>
-            <div id="A" onclick="checkAnswer('A')"></div>
-            <div id="B" onclick="checkAnswer('B')"></div>
-            <div id="C" onclick="checkAnswer('C')"></div>
-            <div id="score"></div>
+    <body>
+        <div class="lessonHeader">
+            <h1><b>Hydrogen</b></h1>
         </div>
-    </div>
-    <div class="endQuizContent" id="endQuizContent" style="display: none;">
-        <p>Congrats on Finishing this lesson on Hydrogren</p>
-        <div id="displayGrade"></div>
-    </div>
-    <script src="quiz_hydrogen.js"></script>
+        <table id ="id3">
+            <tr>
+                <td>Symbol</td>
+                <td> H </td>
+            </tr>
+            <tr>
+                <td>Atom Number</td>
+                <td> 1 </td>
+            </tr>
+            <tr>
+                <td>Atom Wieght</td>
+                <td>1.00794</td>
+            </tr>
+            <tr>
+                <td>Classification</td>
+                <td>Nonmetal</td>
+            </tr>
+            <tr>
+                <td>Melting Point</td>
+                <td>-259.14°C</td>
+            </tr>
+            <tr>
+                <td>Discovered by</td>
+                <td>Henry Cavendish in 1766</td>
+            </tr>
+        </table>
+        <div class="information" id="id4">
+            <p>
+                <h2 id = 'id'>Facts about Hydrogen</h2>
+                <ul id = 'id1'>
+                    <li>Hydrogren is the lightest element on earth.</li>
+                    <li>It consists of one proton and one eletron.</li>
+                    <li>When Hydrogren and Oxygen come together that make water.</li>
+                    <li>It makes up more than 90% of all elements in the universe.</li>
+                    <li>Hydrogen gas is what makes up the stars that we see in the night sky. </li>
+                    <li>Hydrogen makes up our sun.</li>
+                    <li>At standard temperature and pressure hydrogren is a colorless, odorless, and tastless</li>
+                    <li>Hydrogen is also used as a rocket fuel where liquid hydrogen is combined with liquid oxygen
+                        to produce a powerful explosion. Scientists hope that someday hydrogen can be used as a 
+                        clean fuel alternative to gasoline.</li>
+                </ul>
+            </p>
+        </div>
+        
+        <!-- Begining the quiz -->
+        <div class="message" id="id5">
+            <p id = "id2">
+                When your ready click the button below to take a test on the information you have 
+                learnt about hydrogen. The Quiz consistsof three multi choice question in which you
+                have 10 second to answer. Best of luck!!
+            </p>
+        </div>
 
-</body>
+        <!-- Creating the Quiz-->
+        <div class="quizDiv" id="quizDiv">
+            <button id="start" onclick="startQuiz()">Start Quiz!</button>
 
+            <div id ="quiz" style ="display: none;">
+                <div id="question"></div>
+                <div id="A" onclick="checkAnswer('A')"></div>
+                <div id="B" onclick="checkAnswer('B')"></div>
+                <div id="C" onclick="checkAnswer('C')"></div>
+                <div id="score"></div>
+            </div>
+        </div>
+        <div class="endQuizContent" id="endQuizContent" style="display: none;">
+            <p>Congrats on Finishing this lesson on Hydrogren</p>
+            <div id="displayGrade"></div>
+        </div>
+        <script src="QuizCode/quiz_hydrogen.js"></script>
+
+    </body>
+</html>
