--- a/oxygen.html
+++ b/oxygen.html
@@ -1,63 +1,90 @@
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-compatible" content="ie=edge">
-    <link rel="icon" href="images/favicon.PNG">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/lesson_style.css">
-    <link rel="stylesheet" href="navbar/nav_style.css">
-    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-compatible" content="ie=edge">
+        <link rel="icon" href="images/favicon.PNG">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+        <link rel="stylesheet" href="css/lesson_style.css">
+        <link rel="stylesheet" href="navbar/nav_style.css">
+        <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+    
+        <title>Chemistry Lessons | ElementLabs</title>
+        <meta name="description" content="learn and test your knowledge of elements">
+    </head>
+    
+    <body>
+        <div class="lessonHeader">
+            <h1><b>Oxygen</b></h1>
+        </div>
+        <table id="id3">
+            <tr>
+                <td>Symbol</td>
+                <td> O </td>
+            </tr>
+            <tr>
+                <td>Atom Number</td>
+                <td> 8 </td>
+            </tr>
+            <tr>
+                <td>Atom Wieght</td>
+                <td>15.999</td>
+            </tr>
+            <tr>
+                <td>Classification</td>
+                <td>Gas and nonmetal </td>
+            </tr>
+            <tr>
+                <td>Melting Point</td>
+                <td>-218.79°C, -361.82°F </td>
+            </tr>
+            <tr>
+                <td>Discovered by</td>
+                <td>Joseph Priestley in 1774 and C. W. Scheele independently in 1772</td>
+            </tr>
+        </table>
+        <div class="information" id="id4">
+            <p>
+                <h2 id='id'>Facts about Oxygen</h2>
+                <ul id='id1'>
+                    <li>Oxygen is an important element that is needed by most life forms on Earth to survive</li>
+                    <li>It consists of 8 protons and 8 eletrons.</li>
+                    <li>When Hydrogren and Oxygen come together that make water.</li>
+                    <li>It is the third most abundant element in the universe and the most abundant element in the human body.</li>
+                    <li>Under standard conditions oxygen forms a gas that is composed of molecules consisting of two oxygen atoms (O2) </li>
+                    <li>- Oxygen makes up around 21% of the Earth's atmosphere and 50% of the mass of the Earth's crust.
+                    </li>
+                    <li>Oxygen is used by animals and plants in the respiration (breathing) process</li>
+                    <li>They are also used as life support for astronauts and scuba divers.</li>
+                </ul>
+            </p>
+        </div>
+        <!-- Begining the quiz -->
+        <div class="message" id="id5">
+            <p id = "id2">
+                When your ready click the button below to take a test on the information you have 
+                learnt about hydrogen. The Quiz consistsof three multi choice question in which you
+                have 10 second to answer. Best of luck!!
+            </p>
+        </div>
 
-    <title>Chemistry Lessons | ElementLabs</title>
-    <meta name="description" content="learn and test your knowledge of elements">
-</head>
+        <!-- Creating the Quiz-->
+        <div class="quizDiv" id="quizDiv">
+            <button id="start" onclick="startQuiz()">Start Quiz!</button>
 
-<body>
-    <div class="lessonHeader">
-        <h1><b>Oxygen</b></h1>
-    </div>
-    <table id="id3">
-        <tr>
-            <td>Symbol</td>
-            <td> O </td>
-        </tr>
-        <tr>
-            <td>Atom Number</td>
-            <td> 8 </td>
-        </tr>
-        <tr>
-            <td>Atom Wieght</td>
-            <td>15.999</td>
-        </tr>
-        <tr>
-            <td>Classification</td>
-            <td>Gas and nonmetal </td>
-        </tr>
-        <tr>
-            <td>Melting Point</td>
-            <td>-218.79°C, -361.82°F </td>
-        </tr>
-        <tr>
-            <td>Discovered by</td>
-            <td>Joseph Priestley in 1774 and C. W. Scheele independently in 1772</td>
-        </tr>
-    </table>
-    <div class="information" id="id4">
-        <p>
-            <h2 id='id'>Facts about Oxygen</h2>
-            <ul id='id1'>
-                <li>Oxygen is an important element that is needed by most life forms on Earth to survive</li>
-                <li>It consists of 8 protons and 8 eletrons.</li>
-                <li>When Hydrogren and Oxygen come together that make water.</li>
-                <li>It is the third most abundant element in the universe and the most abundant element in the human body.</li>
-                <li>Under standard conditions oxygen forms a gas that is composed of molecules consisting of two oxygen atoms (O2) </li>
-                <li>- Oxygen makes up around 21% of the Earth's atmosphere and 50% of the mass of the Earth's crust.
-                </li>
-                <li>Oxygen is used by animals and plants in the respiration (breathing) process</li>
-                <li>They are also used as life support for astronauts and scuba divers.</li>
-            </ul>
-        </p>
-    </div>
-
-
-</body>
+            <div id ="quiz" style ="display: none;">
+                <div id="question"></div>
+                <div id="A" onclick="checkAnswer('A')"></div>
+                <div id="B" onclick="checkAnswer('B')"></div>
+                <div id="C" onclick="checkAnswer('C')"></div>
+                <div id="score"></div>
+            </div>
+        </div>
+        <div class="endQuizContent" id="endQuizContent" style="display: none;">
+            <p>Congrats on Finishing this lesson on Hydrogren</p>
+            <div id="displayGrade"></div>
+        </div>
+        <script src="QuizCode/quiz_oxygen.js"></script>
+    </body>
+</html>
